[RootLayerScrolls] Fix position:sticky layer position after scroll

As a performance optimization, when the root layer scrolls we don't
call UpdateLayerPositionsRecursive (which is expensive).  For most
layers whose position depends on the scroll offset of the root layer
that's fine; PaintLayer::Location() factors in the scroll offset of
the root layer.  However, layers associated with sticky objects have a
more complex relationship with the scroll offset of their scrolling
ancestor (see LayoutBoxModelObject::StickyPositionOffset()).  So it
makes sense to update their layer position from
UpdateLayerPositionsAfterOverflowScroll.

BUG=808479
R=flackr@chromium.org,skobes@chromium.org

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I74e023b6c8390093fc493a7f0efec9c8f5601034
Reviewed-on: https://chromium-review.googlesource.com/907692
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535219}
Former-commit-id: ef082b8cab887301fbba11ba146a155a3057fdf6